<resources>
    <string name="app_name">Story App</string>
    <string name="label_created_by">Wrote by</string>
    <string name="label_created_at">Created at</string>
    <string name="label_description">Story</string>
    <string name="label_btn_positive_got_it">Got it</string>
    <string name="permission_rationale_title">This application needs permission from you</string>
    <string name="camera_permission_rationale_message">For the application to run properly, the application needs your permission to access the camera and storage</string>
    <string name="location_permission_rationale_message">In order for the application to run properly, the application needs permission to access the location of your device</string>
    <string name="permission_denied_dialog_title">App not getting permission</string>
    <string name="camera_permission_denied_dialog_message">You do not allow this application to access the camera and storage, please enable permission via settings to be able to use this feature</string>
    <string name="location_permission_denied_dialog_message">You do not allow this application to access your devices location, please activate the permission through the settings to be able to use this feature</string>
    <string name="content_desc_detail_story_photo">Photo</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_btn_login">Login</string>
    <string name="label_btn_register">Register</string>
    <string name="label_username">Username</string>
    <string name="subtitle_register">Not have account yet?</string>
    <string name="label_btn_register_variant">Register here</string>
    <string name="title_menu_icon_profile">icon profile</string>
    <string name="title_menu_posting">Posting</string>
    <string name="my_name">Sam Zuhal Setiawan</string>
    <string name="my_email">samzuhal095@gmail.com</string>
    <string name="title_menu_about_me">About Me</string>
    <string name="error_text_email_etl">Not a valid email</string>
    <string name="error_text_password_etl">At least 8 character for password</string>
    <string name="error_text_confirm_password_etl">Password not match</string>
    <string name="label_photo_picker">Click for chose photo</string>
    <string name="title_dialog_failed_capture_photo">Warning!</string>
    <string name="dialog_failed_capture_photo_message">Unable to saved photo, Try again.</string>
    <string name="label_btn_positive_ok">Oke</string>
    <string name="label_btn_logout">Logout</string>
    <string name="title_dialog_icon_profile">Account Information</string>
    <string name="title_dialog_simple_warning">Warning</string>
    <string name="dialog_simple_warning_default_message">Default Message</string>
    <string name="label_fab_create_story">Create Story</string>
    <string name="content_desc_fab_create_story">Create Story</string>
    <string name="label_btn_negative">Cancel</string>
    <string name="label_dialog_photo_source_chooser">Choose Photo Source</string>
    <string name="label_btn_camera">Camera</string>
    <string name="label_btn_gallery">Gallery</string>
    <string name="maps_style_id" translatable="false">7d731933609e26cc</string>
    <string name="label_menu_story">Story</string>
    <string name="content_desc_menu_story">Menu Story</string>
    <string name="label_menu_map">Maps</string>
    <string name="content_desc_menu_map">Menu Map</string>
    <string name="dialog_create_story_input_empty_message">Photo and Story cannot be empty</string>
</resources>