<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="48dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.login.LoginFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/lavLoginLottie"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etlEmail"
        app:layout_constraintVertical_chainStyle="packed"
        app:lottie_rawRes="@raw/lottie_login"
        app:lottie_autoPlay="true"
        app:lottie_loop="false" />

    <com.example.storyapp.presentation.custom_view.EmailEditText
        android:id="@+id/etlEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_email"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/lavLoginLottie"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/etlPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/etEmail" />

    </com.example.storyapp.presentation.custom_view.EmailEditText>

    <com.example.storyapp.presentation.custom_view.PasswordEditText
        android:id="@+id/etlPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_password"
        app:endIconMode="password_toggle"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etlEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/etPassword" />

    </com.example.storyapp.presentation.custom_view.PasswordEditText>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_btn_login"
        android:id="@+id/btnLogin"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etlPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvSubtitleRegister"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSubtitleRegister"
        android:layout_marginTop="16dp"
        android:text="@string/subtitle_register"
        android:textAppearance="?attr/textAppearanceLabelMedium"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_btn_register_variant"
        android:id="@+id/btnRegister"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitleRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>