<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/label_dialog_photo_source_chooser"
        android:id="@+id/tvLabel"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cvCamera" />

    <com.google.android.material.card.MaterialCardView
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/cvCamera"
        app:layout_constraintTop_toBottomOf="@id/tvLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cvGallery"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/ivCameraLogo"
                app:tint="?attr/colorOnPrimaryContainer"
                android:src="@drawable/ic_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_btn_camera"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textAppearance="?attr/textAppearanceLabelLarge" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/cvGallery"
        app:layout_constraintTop_toTopOf="@id/cvCamera"
        app:layout_constraintLeft_toRightOf="@id/cvCamera"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/cvCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:tint="?attr/colorOnPrimaryContainer"
                android:id="@+id/ivGalleryLogo"
                android:src="@drawable/ic_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_btn_gallery"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceLabelLarge"
                android:textColor="?attr/colorOnPrimaryContainer" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
    
</androidx.constraintlayout.widget.ConstraintLayout>