<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/cdlDetailPage"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.detail.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ablDetailPage"
        app:liftOnScroll="true"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:id="@+id/ctlDetailPage"
            android:layout_width="match_parent"
            app:titleTextColor="@color/white"
            app:collapsedTitleTextColor="@color/white"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:contentScrim="?attr/colorPrimary">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ivStoryImage"
                tools:src="@tools:sample/backgrounds/scenic"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:contentDescription="@string/content_desc_detail_story_photo" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/mtbDetailPage"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                android:paddingEnd="16dp"
                app:title="Story by SamZ"
                app:layout_collapseMode="pin"
                app:titleTextColor="@color/white"
                android:background="@android:color/transparent"
                app:navigationIcon="@drawable/ic_arrow_left"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nsvDetailPage"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:id="@+id/clDetailStory"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etlCreatedAt"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/label_created_at">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCreatedAt"
                    android:enabled="false"
                    android:textColor="?attr/colorOnSurface"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="3 Maret 2023 15:00 PM" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etlUserStory"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/etlCreatedAt"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/label_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserStory"
                    android:enabled="false"
                    android:textColor="?attr/colorOnSurface"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Placeholder" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.fragment.app.FragmentContainerView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="24dp"
                android:visibility="gone"
                tools:visibility="visible"
                android:id="@+id/fcvMapsDetailPage"
                app:layout_constraintTop_toBottomOf="@id/etlUserStory"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:name="com.example.storyapp.presentation.custom_view.CustomSupportMapFragment" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        tools:visibility="invisible"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbLoading" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>